demo page complete v1

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -17,8 +17,14 @@ body{
 @import "modules/header";
 @import "modules/login-register";
 @import "modules/carousel";
+@import "modules/home";
 @import "modules/fees";
 @import "modules/faq";
 @import "modules/about";
 @import "modules/values";
+@import "modules/seguro";
+@import "modules/restriction";
+@import "modules/privacy";
+@import "modules/conditions";
+@import "modules/calculator";
 @import "modules/footer";
