--- a/app/scss/modules/_about.scss
+++ b/app/scss/modules/_about.scss
@@ -4,7 +4,7 @@
   box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
   margin: 20px 0;
   .title-box {
-    background: url("../../img/img-quienes-somos.png") center no-repeat;
+    background: url("../img/img-quienes-somos.png") center no-repeat;
     background-size: cover;
     padding: 70px 0;
     width: 100%;
