--- a/app/scss/modules/_faq.scss
+++ b/app/scss/modules/_faq.scss
@@ -4,7 +4,7 @@
   border: 1px solid #f0f0f0;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
   .title-box {
-    background: url("../../img/preguntas-frecuentes.jpg") center no-repeat;
+    background: url("../img/preguntas-frecuentes.jpg") center no-repeat;
     background-size: cover;
     padding: 70px 0;
     width: 100%;
