--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -11,6 +11,13 @@ footer{
       }
     }
   }
+  .social{
+    nav{
+      i{
+        font-size: 1rem;
+      }
+    }
+  }
   .copy{
     color:$white;
     font-size: 13px;
@@ -25,3 +32,4 @@ footer{
     left:0;
   }
 }
+
